--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="index.js"></script>
 
     <!-- Forms & form-elements -->
-    <h2>Forms</h2>
+    <h2>Forms and form elements</h2>
     <div class="border forms">
       <form>
         
