Numbers and its functions

--- a/index.html
+++ b/index.html
@@ -6,9 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>HTML 5 Boilerplate</title>
     <link rel="stylesheet" href="style.css" />
+
+    <!-- Prescribed way of inserting javascript into HTML -->
     <script src="index.js"></script>
   </head>
   <body>
+
+    <!-- We can do this to write logic in html BUT NOT PREFERRED -->
+    <script>
+      console.log('From HTML File')
+    </script>
 
     <!-- Forms & form-elements -->
     <h2>Forms and form elements</h2>
