--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
     <!-- Prescribed way of inserting javascript into HTML -->
     <script src="index.js"></script>
+    <script src="strings.js"></script>
+    <script src="numbers.js"></script>
   </head>
   <body>
 
