Arrays and a few of its methods

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="style.css" />
 
     <!-- Prescribed way of inserting javascript into HTML -->
-    <script src="index.js"></script>
+    <!-- <script src="index.js"></script>
     <script src="strings.js"></script>
-    <script src="numbers.js"></script>
+    <script src="numbers.js"></script> -->
+    <script src="arrays.js"></script>
   </head>
   <body>
 
