--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <!-- <script src="index.js"></script>
     <script src="strings.js"></script>
     <script src="numbers.js"></script> -->
-    <!-- <script src="arrays.js"></script> -->
-    <script src="loops-and-conditions.js"></script>
+    <script src="arrays.js"></script>
+    <!-- <script src="loops-and-conditions.js"></script> -->
   </head>
   <body>
 
